--- a/src/styles/veriables.scss
+++ b/src/styles/veriables.scss
@@ -7,4 +7,5 @@ $secondary_background: #242424;
 $card_background: #424242;
 $default_border: #1a1a1a;
 $grey_60: #b8b8b8;
+$grey_80: #262626;
 $murky_black: #333333;
