--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -6,6 +6,53 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  // padding: 6rem;
+
   min-height: 100vh;
+
+  .yearListing {
+    margin-top: 75px;
+    width: 100%;
+    display: flex;
+    padding: 50px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 100px;
+    align-self: stretch;
+
+    border-radius: 12px;
+    border: 1px solid $grey_80;
+  }
+}
+
+@media only screen and (max-width: 1580px) {
+  .main {
+    padding: 0 15px;
+  }
+}
+@media only screen and (max-width: 1440px) {
+  .main {
+    padding: 0 15px;
+    .yearListing {
+      padding: 25px;
+      gap: 70px;
+    }
+  }
+}
+@media only screen and (max-width: 821px) {
+  .main {
+    padding: 0 10px;
+    .yearListing {
+      gap: 40px;
+    }
+  }
+}
+@media only screen and (max-width: 465px) {
+  .main {
+    padding: 0 6px;
+    .yearListing {
+      margin-top: 35px;
+      gap: 20px;
+      padding: 8px;
+    }
+  }
 }
